<resources>
    <string name="app_name">Licenta</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add_user">Add user</string>
    <string name="remove_user">Remove user</string>
    <string name="empty_not_saved">Recipe was not saved because there were missing items.</string>
    <string name="add_recipe">Add recipe</string>
    <string name="update_recipe">Update recipe</string>
    <string name="name">Name</string>
    <string name="cooking_notes">Cooking notes</string>
    <string name="preparation_time">Preparation time</string>
    <string name="ingredients">Ingredients</string>
    <string name="delete_button">Delete button</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="accept"><![CDATA[I accept Terms & Conditions]]></string>
    <string name="submit">Submit</string>
    <string name="error_email_input">Fill the input with a valid email address</string>
    <string name="error_name_input">Fill the input with a valid name</string>
    <string name="error_accepted_tc"><![CDATA[Please accept Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="recipe_not_owned">You can\'t edit a recipe you do not own</string>
    <string name="take_picture">Take picture</string>
    <string name="recipe">Recipe</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="save_changes">Save changes</string>
    <string name="sign_out">Sign out</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="update_ingredient">Update ingredient</string>
    <string name="delete_ingredient">Delete ingredient</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="add_new_ingredient">Add new ingredient</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="your_profile">Your profile</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="type">Type:</string>
    <string name="cooking_notes1">Cooking notes:</string>
    <string name="ingredients1">Ingredients:</string>
    <string name="aplicatie_android_pentru_retete_gastronomice">Aplicatie Android pentru retete gastronomice</string>
    <string name="ingredient_name">Ingredient name:</string>
    <string name="quantity1">Quantity:</string>
    <string name="unit1">Unit:</string>
</resources>
