<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navRecipe"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/recipe" />
        <item
            android:id="@+id/navIngredient"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/navShare"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/navSend"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/send" />
        </menu>
    </item>

</menu>