<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_16">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:padding="@dimen/space_8"/>

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/quantity"
        android:padding="@dimen/space_8"/>

    <EditText
        android:id="@+id/editTextUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/unit"
        android:padding="@dimen/space_8"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_ingredient"
        android:layout_gravity="center"
        android:padding="@dimen/space_8"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/space_8"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_ingredient"
        android:layout_gravity="center"
        android:padding="@dimen/space_8"
        android:background="@color/design_default_color_error"
        android:textColor="@android:color/white"/>

</LinearLayout>